--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AdaptedCSSFriendly" version="1.1.1" targetFramework="net45" />
+  <package id="Base32" version="1.0.0.26" targetFramework="net452" />
   <package id="CKFinder.library" version="1.4.0.1" targetFramework="net452" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net451" />
@@ -21,5 +22,6 @@
   <package id="MsSqlDBUtility" version="1.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NLog" version="4.4.1" targetFramework="net452" />
+  <package id="OtpSharp" version="1.3.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
