--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>One.NET</id>
-        <version>4.0.0</version>
+        <version>4.0.1</version>
         <releaseNotes>4.0 release with 2FA authentication</releaseNotes>
         <title>One.NET</title>
         <authors>samo4</authors>
@@ -30,7 +30,8 @@
           <dependency id="MsSqlDBUtility" version="1.1.2"  />
           <dependency id="CKFinder.library" version="1.4.0.1"  />
           <dependency id="NLog" version="4.4.1" />
-
+          <dependency id="Base32"  version="1.0.0.26" />
+          <dependency id="OtpSharp"  version="1.3.0.4" />
         </dependencies>
     </metadata>
     <files>
