--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -7,21 +7,23 @@
   <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="Kentor.OwinCookieSaver" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Google" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Administration" version="7.0.0.0" targetFramework="net452" />
   <package id="MsSqlDBUtility" version="1.1.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="NLog" version="4.4.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="NLog" version="4.4.12" targetFramework="net452" />
   <package id="OtpSharp" version="1.3.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net452" />
 </packages>
