--- a/OneMainWeb/ClientApp/package.json
+++ b/OneMainWeb/ClientApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-stage-2": "^6.24.1",
+    "bootstrap-vue": "^2.0.0-rc.2",
     "vue": "^2.5.16"
   },
   "browserslist": [
