--- a/OneMainWeb/ClientApp/package.json
+++ b/OneMainWeb/ClientApp/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "watch": "cross-env NODE_ENV=production webpack --watch --hide-modules",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
