primitive save works

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Scaffold\PhysicalSchema.cs" />
     <Compile Include="Scaffold\Schema.cs" />
     <Compile Include="Service\AdminService.cs" />
+    <Compile Include="Service\AdminService2.cs" />
     <Compile Include="Service\IAdminService.cs" />
     <Compile Include="Service\IScaffoldService.cs" />
     <Compile Include="Service\MembershipAuthorizationPolicy.cs" />
