--- a/OneMainWeb/ClientApp/package.json
+++ b/OneMainWeb/ClientApp/package.json
@@ -18,6 +18,7 @@
     "lcid": "^1.0.0",
     "vue": "^2.5.16",
     "vue-ckeditor2": "^1.25.0",
+    "vue-scrollto": "^2.11.0",
     "vuejs-datepicker": "^0.9.29",
     "vuelidate": "^0.6.2"
   },
@@ -30,6 +31,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
