--- a/OneMainWeb/One.Net.library.nuspec
+++ b/OneMainWeb/One.Net.library.nuspec
@@ -11,8 +11,8 @@
         <copyright>Copyright © Renderspace d.o.o. 2016</copyright>
         <dependencies>
           <dependency id="Newtonsoft.Json" version="10.0.3" />
-          <dependency id="AdaptedCSSFriendly"  />
-          <dependency id="MsSqlDBUtility"  />
+          <dependency id="AdaptedCSSFriendly" version="1.1.1"  />
+          <dependency id="MsSqlDBUtility" version="1.1.2"  />
           <dependency id="NLog" version="4.4.12" />
         </dependencies>
     </metadata>
