--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -2,8 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>One.NET</id>
-        <version>4.0.5</version>
-        <releaseNotes>4.0.5 with vue articles</releaseNotes>
+        <version>4.0.7</version>
+        <releaseNotes>4.0.7 with vue articles</releaseNotes>
         <title>One.NET</title>
         <authors>samo4</authors>
         <owners>Renderspace d.o.o.</owners>
@@ -55,6 +55,8 @@
       <file src="adm\**.png" target="content\adm" />
       <file src="adm\**.css" target="content\adm" />
       <file src="adm\**.ashx" target="content\adm" />
+
+      <file src="ClientApp\dist\*.*" target="content\ClientApp\dist" />
 
       <file src="AdminControls\**.ascx" target="content\AdminControls" />
       <file src="CommonModules\**.ascx" target="content\CommonModules" />
