--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,6 +45,7 @@
       <HintPath>..\packages\AdaptedCSSFriendly.1.1.1\lib\net45\AdaptedCSSFriendly.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
       <HintPath>..\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
@@ -57,24 +58,14 @@
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.Data">
       <HintPath>..\packages\EnterpriseLibrary.TransientFaultHandling.Data.6.0.1304.1\lib\NET45\Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Web.Administration, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Web.Administration.7.0.0.0\lib\net20\Microsoft.Web.Administration.dll</HintPath>
+    <Reference Include="MsSqlDBUtility, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MsSqlDBUtility.1.1.2\lib\net45\MsSqlDBUtility.dll</HintPath>
     </Reference>
-    <Reference Include="MsSqlDBUtility, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MsSqlDBUtility.1.1.1\lib\net45\MsSqlDBUtility.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.3.5\lib\net45\NLog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="StackExchange.Redis, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\StackExchange.Redis.1.1.603\lib\net45\StackExchange.Redis.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\NLog.4.5.4\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -84,6 +75,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -99,7 +91,6 @@
     <Compile Include="Caching\CacheFactory.cs" />
     <Compile Include="Caching\ICacheProvider.cs" />
     <Compile Include="Caching\NetMemoryCacheProvider.cs" />
-    <Compile Include="Caching\RedisCacheProvider.cs" />
     <Compile Include="Core\BArticle.cs" />
     <Compile Include="Core\BCategorization.cs" />
     <Compile Include="Core\BContent.cs" />
@@ -203,7 +194,6 @@
     <Compile Include="Service\SerializableJsonDictionary.cs" />
     <Compile Include="Utility\FileRightsReader.cs" />
     <Compile Include="Utility\FormatTool.cs" />
-    <Compile Include="Utility\IISHelper.cs" />
     <Compile Include="Utility\LoosyFormatter.cs" />
     <Compile Include="Utility\StringTool.cs" />
     <Compile Include="Utility\UrlBuilder.cs" />
