--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -2,14 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>One.NET</id>
-        <version>4.0.13</version>
-        <releaseNotes>FB SKD version</releaseNotes>
+        <version>4.0.14</version>
+        <releaseNotes>Virtual table json; upgraded libraries</releaseNotes>
         <title>One.NET</title>
         <authors>samo4</authors>
         <owners>Renderspace d.o.o.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A simple enterprise content management system</description>
-        <copyright>Copyright © Renderspace d.o.o. 2016</copyright>
+        <copyright>Copyright © Renderspace d.o.o. 2018</copyright>
         <tags>web asp.net webforms CMS</tags>
         <dependencies>
           
@@ -22,14 +22,12 @@
           <dependency id="Microsoft.Owin.Security.OAuth" version="3.1.0" />
           <dependency id="Microsoft.Owin.Security.Cookies" version="3.1.0" />
           
-          <dependency id="Newtonsoft.Json" version="10.0.3" />
-          <dependency id="Microsoft.Web.Administration" version="7.0.0" />
-          <dependency id="StackExchange.Redis" version="1.2.6" />
+          <dependency id="Newtonsoft.Json" version="11.0.2" />
         
           <dependency id="AdaptedCSSFriendly" version="1.1.1"  />
           <dependency id="MsSqlDBUtility" version="1.1.2"  />
           <dependency id="CKFinder.library" version="1.4.0.1"  />
-          <dependency id="NLog" version="4.4.12" />
+          <dependency id="NLog" version="4.5.4" />
           <dependency id="Base32"  version="1.0.0.26" />
           <dependency id="OtpSharp"  version="1.3.0.4" />
         </dependencies>
