simple search module

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -411,6 +411,12 @@
     <Compile Include="CommonModules\PageTitle.ascx.designer.cs">
       <DependentUpon>PageTitle.ascx</DependentUpon>
     </Compile>
+    <Compile Include="CommonModules\SimpleSearch.ascx.cs">
+      <DependentUpon>SimpleSearch.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="CommonModules\SimpleSearch.ascx.designer.cs">
+      <DependentUpon>SimpleSearch.ascx</DependentUpon>
+    </Compile>
     <Compile Include="CommonModules\TemplateContent.ascx.cs">
       <DependentUpon>TemplateContent.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -548,6 +554,7 @@
     <Content Include="CommonModules\Menu.ascx" />
     <Content Include="CommonModules\NavigatePages.ascx" />
     <Content Include="CommonModules\PageTitle.ascx" />
+    <Content Include="CommonModules\SimpleSearch.ascx" />
     <Content Include="CommonModules\TemplateContent.ascx" />
     <Content Include="CommonModules\VirtualTable.ascx" />
     <Content Include="Controls\AdminWikiMenu.ascx" />
