added frontendservice to allow searching for page content from frontend 4.1.7

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -187,7 +187,9 @@
     <Compile Include="Scaffold\Schema.cs" />
     <Compile Include="Service\AdminService.cs" />
     <Compile Include="Service\AdminService2.cs" />
+    <Compile Include="Service\FrontendService.cs" />
     <Compile Include="Service\IAdminService.cs" />
+    <Compile Include="Service\IFrontendService.cs" />
     <Compile Include="Service\IScaffoldService.cs" />
     <Compile Include="Service\MembershipAuthorizationPolicy.cs" />
     <Compile Include="Service\ScaffoldService.cs" />
