--- a/OneMainWeb/SiteDefault/Web.config
+++ b/OneMainWeb/SiteDefault/Web.config
@@ -235,6 +235,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="FrontendService">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <location path="AdminService/ListFiles">
     <system.web>
       <authorization>
