--- a/OneMainWeb/LocalRewrite.config
+++ b/OneMainWeb/LocalRewrite.config
@@ -22,4 +22,12 @@
     </conditions>
     <action type="Redirect" redirectType="Permanent" url="{R:1}" />
   </rule>
+  <rule name="http to https" stopProcessing="true">
+    <match url="(.*)" />
+    <conditions>
+        <!-- add input="{HTTP_HOST}" pattern="^www\.example\.com$" / -->
+        <add input="{HTTPS}" pattern="^OFF$" />
+    </conditions>
+    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="SeeOther" />
+  </rule>
 </rules>
