--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -3,13 +3,13 @@
     <metadata>
         <id>One.NET</id>
         <version>4.2.3</version>
-        <releaseNotes>Added Articles JSON api</releaseNotes>
+        <releaseNotes>Change .NET Framework</releaseNotes>
         <title>One.NET</title>
         <authors>samo4</authors>
         <owners>Renderspace d.o.o.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A simple enterprise content management system</description>
-        <copyright>Copyright © Renderspace d.o.o. 2018</copyright>
+        <copyright>Copyright © Renderspace d.o.o. 2020</copyright>
         <tags>web asp.net webforms CMS</tags>
         <dependencies>
           
